adicionado o sistema de erro e acertos de letras

--- a/index.html
+++ b/index.html
@@ -1,13 +1,62 @@
-<!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="assets/css/style.css">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="shortcut icon" href="assets/img/forca.webp" type="image/x-icon">
+  <link rel="stylesheet" href="assets/css/style.css">
+  <title>Jogo da Forca</title>
+
 </head>
+
 <body>
+  <img src="" alt="">
+
+  <div id="forca">
+    <div class="boneco">
+      <div class="cabeca"></div>
+      <div class="corpo"></div>
+      <div class="braco-direito"></div>
+      <div class="braco-esquerdo"></div>
+      <div class="perna-direita"></div>
+      <div class="perna-esquerda"></div>
+    </div>
+    <p id="palavraSecreta"></p>
+    <div class="botoes">
+      <p class="letras" id="a">A</p>
+      <p class="letras" id="b">B</p>
+      <p class="letras" id="c">C</p>
+      <p class="letras" id="d">D</p>
+      <p class="letras" id="e">E</p>
+      <p class="letras" id="f">F</p>
+      <p class="letras" id="g">G</p>
+      <p class="letras" id="h">H</p>
+      <p class="letras" id="i">I</p>
+      <p class="letras" id="j">J</p>
+      <p class="letras" id="k">K</p>
+      <p class="letras" id="l">L</p>
+      <p class="letras" id="m">M</p>
+    </div>
     
+    <div class="botoes">
+      <p class="letras" id="n">N</p>
+      <p class="letras" id="o">O</p>
+      <p class="letras" id="p">P</p>
+      <p class="letras" id="q">Q</p>
+      <p class="letras" id="r">R</p>
+      <p class="letras" id="s">S</p>
+      <p class="letras" id="t">T</p>
+      <p class="letras" id="u">U</p>
+      <p class="letras" id="v">V</p>
+      <p class="letras" id="w">W</p>
+      <p class="letras" id="x">X</p>
+      <p class="letras" id="y">Y</p>
+      <p class="letras" id="z">Z</p>
+    </div>
+
+  </div>
+
 </body>
+
 </html>
 <script src="assets/js/main.js"></script>
