mudança de background e atualizaçoes

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 </head>
 
 <body>
-  <img src="" alt="">
-
+  <img src="assets/img/forca.webp" alt="img-forca">
+  
   <div id="forca">
     <div class="boneco">
       <div class="cabeca"></div>
@@ -37,7 +37,6 @@
       <p class="letras" id="l">L</p>
       <p class="letras" id="m">M</p>
     </div>
-    
     <div class="botoes">
       <p class="letras" id="n">N</p>
       <p class="letras" id="o">O</p>
