Adicionado a tabela de letras errada

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
   <img src="assets/img/forca.webp" alt="img-forca">
-  
+
   <div id="forca">
     <div class="boneco">
       <div class="cabeca"></div>
@@ -52,9 +52,11 @@
       <p class="letras" id="y">Y</p>
       <p class="letras" id="z">Z</p>
     </div>
-
   </div>
 
+  <div class="letrasJaUsadas">
+    <p class="letrasUsadas"></p>
+  </div>
 </body>
 
 </html>
