adicionado pagina de verceu

--- a/assets/html/derrota.html
+++ b/assets/html/derrota.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="assets/img/forca.webp" type="image/x-icon">
-    <link rel="stylesheet" href="../css/derrota.css">
+    <link rel="stylesheet" href="../css/conquista.css">
     <title>Jogo da Forca</title>
 </head>
 <body>
     <h1>Perdeuu!! Tente Novamente</h1>
     <a href="../../index.html"><button class="tentarNovamente">Tentar Novamente</button></a>
     <img src="../img/pato chorando.avif" alt="">
+    <h2>Deveria prestar mais atencção nas aulas do professor Mario Ney</h2>
 </body>
 </html>
