--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     </div>
   </div>
 
-  <div class="letrasJaUsadas">
+  <div class="windowLetrasUsadas">
     <p class="letrasUsadas"></p>
   </div>
 </body>
